Added theory implications in abstract, and added a concluding paragraph for the whole thing.

--- a/gullikson-thesis.tex
+++ b/gullikson-thesis.tex
@@ -66,7 +66,8 @@ Finally, I would like to thank all of my friends and colleagues at UT for making
 %\include{preface}
 
 \begin{UTabstract}{Adam Kraus}
-Binary stars and higher-order multiple systems are a ubiquitous outcome of star formation, especially as the system mass increases. The companion mass-ratio distribution is a unique probe into the conditions of the collapsing cloud core and circumstellar disk(s) of the binary fragments. Inside $a \sim 1000$ AU the disks from the two forming stars can interact, and additionally companions can form directly through disk fragmentation. We should therefore expect the mass-ratio distribution of close companions to differ from that of wide companions. This prediction is difficult to test with intermediate-mass primary stars using traditional methods because the contrast ratios that would be required to detect low-mass companions at narrow working angles are not yet achievable. In this thesis, we present a spectroscopic method to detect and characterize close companions to a variety of stars. We demonstrate applications of the method to detection of stars and even planets around sun-like stars, and present the results of a survey searching for companions to A- and B-type stars. As part of the survey, we estimate the temperatures and surface gravity of most of the 341 sample stars, and derive their masses and ages. We additionally estimate the temperatures and masses of the 64 companions we find, 23 of which are new detections. We find that the mass-ratio distribution for our sample has a very different form than in previous work, where it is usually well-described by a power law, and indicates that close companions to intermediate-mass stars experience significantly different accretion histories or formation mechanisms than wide companions.
+Binary stars and higher-order multiple systems are a ubiquitous outcome of star formation, especially as the system mass increases. The companion mass-ratio distribution is a unique probe into the conditions of the collapsing cloud core and circumstellar disk(s) of the binary fragments. Inside $a \sim 1000$ AU the disks from the two forming stars can interact, and additionally companions can form directly through disk fragmentation. We should therefore expect the mass-ratio distribution of close companions to differ from that of wide companions. This prediction is difficult to test with intermediate-mass primary stars using traditional methods because the contrast ratios that would be required to detect low-mass companions at narrow working angles are not yet achievable. In this thesis, we present a spectroscopic method to detect and characterize close companions to a variety of stars. We demonstrate applications of the method to detection of stars and even planets around sun-like stars, and present the results of a survey searching for companions to A- and B-type stars. As part of the survey, we estimate the temperatures and surface gravity of most of the 341 sample stars, and derive their masses and ages. We additionally estimate the temperatures and masses of the 64 companions we find, 23 of which are new detections. We find that the mass-ratio distribution for our sample has a turnover near $q \approx 0.3$, in contrast to the scale-free power law that describes the widely separated binary systems. We take this characteristic scale as evidence that companions are accreting a significant of material through disk interactions as they form, and that the scale is largely set by the disk lifetime.
+
 \end{UTabstract}
 
 
@@ -214,22 +215,16 @@ It is also possible that some of the companions found in this work were formed f
 
 Large scale simulations are likely needed to distinguish between the two formation scenarios and fully interpret the results of this survey. A significant amount of work has already been put towards this end in the form of radiation hydrodynamic simulations of giant molecular clouds \citep{Bate2012, Krumholz2012}. However, the present simulations do not generate enough stars more massive than the sun to quantitatively compare binary and multiple star statistics to observations. Additionally, there is a strong need for high resolution simulations to follow the full accretion and migration history of both core and disk fragments in order to compare the final mass ratios generated to observational studies such as the one presented here.
 
-There is also a need for further observational efforts. Many of the companions we present in Chapter \ref{chap:survey} are unconfirmed, and so need at minimum follow-up spectroscopy. Follow-up imaging of more of the detections with an adaptive optics system would be useful as well, both for confirmation and validation of the companion temperature and to provide an estimate of the orbital separation. Alternatively or in addition to the imaging, the detections could be observed with spectroscopic measurements over several years to map out the full double-lined spectroscopic orbit and provide a dynamical mass ratio and separation measurement. 
+There is also a need for further observational efforts. Many of the companions we present in Chapter \ref{chap:survey} are unconfirmed, and so need at minimum follow-up spectroscopy. Follow-up imaging of more of the detections with an adaptive optics system would be useful as well, both for confirmation and validation of the companion temperature and to provide an estimate of the orbital separation. Alternatively or in addition to the imaging, the detections could be observed with spectroscopic measurements over several years to map out the full double-lined spectroscopic orbit and provide a dynamical mass ratio and separation measurement. Not only would this help to fully characterize the binary systems, but it would allow for an independent test on stellar evolutionary models at young ages.
+
+This thesis represents 6 years of hard work, over 100 long nights at the observatory, and countless hours writing and debugging analysis code. The result is something I am truly proud of. I planned, ran, and analyzed a full survey program that hinged on a rarely-studied and poorly-characterized method, and came out the end with a new and interesting result. As I go on in my career, I will surely look back at this time as so much more than just school. The lessons learned cannot be taught, and the importance of the friendships made cannot be understated. More than coding, long nights, and hard work this thesis represents countless hours learning new things, over 100 nights of paid stargazing, and 6 of the best years yet. Thank you to everyone who made it so.
 
 
-TODO: Summarize in a paragraph to make it end better.
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-%\begin{appendix}
-
-%\chapter{First}
-%\lipsum[3]
-
-%\chapter{Second}
-
-%\end{appendix}
 
 \backmatter
 
