--- a/paper6.tex
+++ b/paper6.tex
@@ -14,9 +14,9 @@ Stellar multiplicity is an inevitable and common outcome of star formation, with
 
 The overall multiplicity rate and the distributions of mass ratio, period, and eccentricity of a binary star population place important constraints on the mode of binary star formation. While the period and eccentricity are altered by dynamical processing in the birth cluster, the present-day mass ratio of a binary system is a direct result of its formation \citep{Parker2013}. Most binary stars are thought to form via core fragmentation \citep{Boss1979, Boss1986, Bate1995}, in which a collapsing core fragments into two or more individual protostars. The number and initial masses of the fragments are set by the total core mass, as well as its rotation, turbulence, and its temperature and density structure. If the fragments are well separated ($a \gtrsim 1000$ AU), they will evolve independently of each other, accreting mass from the core material onto their own protostellar disks and then onto the protostars themselves. However close fragments ($a \sim 100$ AU) will interact with each other; the protostellar disk may be truncated, destabilized, or form into a circumbinary disk if the separation is small enough \citep{Bate1997}. In addition, an unstable disk can fragment to form low-mass companions \citep{Kratter2006, Stamatellos2011}. The mass ratios of close companions formed via either mechanism should be affected by preferential accretion. Most work has suggested that the disk material will preferentially accrete onto the lower mass companion \citep{Bate1997, BBB2002}; however, recent work has indicated that magnetic disk braking may result in preferential accretion onto the more massive component \citep{Zhao2013} instead. In either case, we would expect to find a mass-ratio distribution for companions inside a few $100$ AU that differs from that of companions on wider orbits.
 
-The mass ratio, period, and eccentricity distributions are well-known for solar type stars \citep{Duquennoy1991, Raghavan2010} and cooler stars \citep{Fischer1992, Delfosse2004}. Interestingly, \citet{Reggiani2011}, and later \citet{Meyer2013}, found that the mass-ratio distribution of field solar-type and M-dwarf stars is invariant to separation. However, the solar-type binary semimajor axis distribution peaks near $45$ AU, and only $\sim 10\%$ of binary systems have separations $a < 100$ AU \citep{Raghavan2010}; the 30 stars used in the analysis by \citet{Reggiani2011} is unsufficient to rule out a separation-variant mass-ratio distribution if it changes outside $a \gtrsim 100$ AU. Field M-dwarf binary systems have typical separations of $\sim 5$ AU \citep{Fischer1992}, and so the 27 stars using in the analysis is again insufficient to look for differences outside of $100$ AU.
+The mass ratio, period, and eccentricity distributions are well-known for solar type stars \citep{Duquennoy1991, Raghavan2010} and cooler stars \citep{Fischer1992, Delfosse2004}. Interestingly, \citet{Reggiani2011}, and later \citet{Meyer2013}, found that the mass-ratio distribution of field solar-type and M-dwarf stars is invariant to separation. The field M-dwarf semimajor axis distribution peaks near $\sim 5$ AU \citep{Duchene2013}, with very few companions at separation $\gtrsim 100$ AU; the 27 stars used in the analysis by \citet{Reggiani2011} is unsufficient to compare the mass-ratio distribution inside $\sim 100$ AU with that outside it. However, the solar-type period distribution peaks near $45$ AU \citep{Raghavan2010}, with roughly $40\%$ of binary systems on orbits wider than $100$ AU. The nondetection of a difference in mass-ratio distribution is significant, although with only 30 stars in the field sample it is difficult to completely rule out that such a difference exists.
 
-All of the orbital distributions are much less certain for more massive stars. The reason for this is two-fold: first, more massive stars tend to be more distant than sunlike or low-mass stars, meaning many of the companions are angularly close to the primaries and difficult to detect with imaging techniques. Second, the primary stars tend to be rapid rotators, which limits radial velocity precision to $\sim 1 \mathrm{km\ s}^{-1}$. Additionally, radial velocity monitoring can only measure a mass ratio if spectral lines from both components are visible; this typically suffers from the same flux ratio difficulty as imaging techniques.
+All of the orbital distributions are much less certain for more massive stars. The reason for this is two-fold: first, more massive stars tend to be more distant than sunlike or low-mass stars, meaning many of the companions are angularly close to the primaries and difficult to detect with imaging techniques. Second, the primary stars tend to be rapid rotators, which limits radial velocity precision to $\sim 1 \mathrm{km\ s}^{-1}$ and causes the spectral lines of double-lined systems to blend. Radial velocity monitoring can only measure a mass ratio if spectral lines from both components are visible and separable; this typically suffers from the same flux ratio difficulty as imaging techniques.
 
 Nonetheless, \citet{DeRosa2014} performed an adaptive optics imaging survey of nearby A-type stars, and found that the mass-ratio distribution is well-described by a power law with large slope, indicating a very strong preference for low-mass companions. They also found initial evidence that the mass-ratio distribution for companions inside $125$ AU has a much shallower power law slope than that of wide companions, and is consistent with flat. Their close companion subsample contained only 18 binary systems, and the result is complicated by the inherent difficulty of detecting close companions with low mass ratios in an imaging survey. 
 
